--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Daftar Tugas</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <h1>To-Do List</h1>
+    
+    <div class="form">
+      <input type="text" id="taskInput" placeholder="Add a to-do...">
+      <input type="date" id="dateInput">
+      <button id="addBtn">+</button>
+    </div>
+
+    <div class="filter">
+      <button id="Filter">FILTER</button>
+      <button id="Deleteall">DELETE ALL</button>    
+    </div>
+   
+    <table>
+      <thead>
+        <tr>
+          <th>TASK</th>
+          <th>DUE DATE</th>
+          <th>STATUS</th>
+          <th>ACTIONS</th>
+        </tr>
+      </thead>
+      <tbody id="taskList">
+        <tr><td colspan="4">No tasks found</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
